// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendTransactionForm should render 1`] = `
<div>
  <div
    class="space-y-5 SendTransactionForm"
  >
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="SendTransactionForm__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="SendTransactionForm__network-input"
            id="SendTransactionForm__network-label"
          />
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
          >
            <div
              class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 text-theme-secondary-500 ring-theme-background dark:border-theme-secondary-700"
              data-testid="SelectNetworkInput__network"
            />
            <div
              class="flex relative flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="SendTransactionForm__network-menu"
                aria-labelledby="SendTransactionForm__network-label"
                autocomplete="off"
                class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                data-testid="SelectNetworkInput__input"
                id="SendTransactionForm__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
              
            </div>
          </div>
        </div>
        <div
          class="hidden"
          data-testid="SelectNetwork__options"
        >
          <div
            class=""
          >
            <ul
              aria-labelledby="SendTransactionForm__network-label"
              class="grid grid-cols-6 gap-3"
              id="SendTransactionForm__network-menu"
              role="listbox"
            />
          </div>
          <div
            class="mt-6"
          >
            <ul
              aria-labelledby="SendTransactionForm__network-label"
              class="grid grid-cols-6 gap-3"
              id="SendTransactionForm__network-menu"
              role="listbox"
            >
              <li
                class="inline-block cursor-pointer h-21"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK Devnet"
                  class="flex justify-center items-center w-full h-full rounded-xl border-2 border-theme-primary-100 text-theme-primary-300 dark:border-theme-secondary-800"
                  data-testid="NetworkIcon-ARK-ark.devnet"
                >
                  <div
                    class="sc-bdfBwQ caqoGN"
                    data-testid="NetworkIcon__icon"
                    height="30"
                    width="30"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="senderAddress"
      >
        Sender
      </label>
      <div
        data-testid="sender-address"
      >
        <button
          class="relative w-full rounded focus:ring-2 focus:outline-none focus:ring-theme-primary-400"
          data-testid="SelectAddress__wrapper"
          type="button"
        >
          <span
            class="flex absolute inset-0 items-center px-14 w-full border border-transparent"
          >
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            />
          </span>
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
          >
            <div
              class="Circle__CircleWrapper-uw7h4j-0 grnDUY bg-theme-secondary-200 border-theme-secondary-200 ring-theme-background dark:bg-theme-secondary-700 dark:border-theme-secondary-700"
            />
            <div
              class="flex relative invisible flex-1 h-full"
            >
              <input
                class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                data-testid="SelectAddress__input"
                name="senderAddress"
                readonly=""
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdfBwQ iyevwF"
                    height="20"
                    width="20"
                  >
                    <svg>
                      user.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </button>
      </div>
    </fieldset>
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="fee"
      >
        Transaction Fee
      </label>
      <div
        class="flex space-x-2"
        data-testid="InputFee"
      >
        <div
          class="flex-1"
        >
          <div
            class="relative"
          >
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 iRRxpY"
              disabled=""
            >
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures text-theme-secondary-text"
                  data-testid="InputCurrency"
                  disabled=""
                  name="fee"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`SendTransactionForm should select a network & update fees 1`] = `
<div>
  <div
    class="space-y-5 SendTransactionForm"
  >
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="SendTransactionForm__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="SendTransactionForm__network-input"
            id="SendTransactionForm__network-label"
          />
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 text-theme-secondary-500 ring-theme-background dark:border-theme-secondary-700"
              data-testid="SelectNetworkInput__network"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="flex relative flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="SendTransactionForm__network-menu"
                aria-labelledby="SendTransactionForm__network-label"
                autocomplete="off"
                class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                data-testid="SelectNetworkInput__input"
                id="SendTransactionForm__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
              
            </div>
          </div>
        </div>
        <div
          class="hidden"
          data-testid="SelectNetwork__options"
        >
          <div
            class=""
          >
            <ul
              aria-labelledby="SendTransactionForm__network-label"
              class="grid grid-cols-6 gap-3"
              id="SendTransactionForm__network-menu"
              role="listbox"
            />
          </div>
          <div
            class="mt-6"
          >
            <ul
              aria-labelledby="SendTransactionForm__network-label"
              class="grid grid-cols-6 gap-3"
              id="SendTransactionForm__network-menu"
              role="listbox"
            >
              <li
                class="inline-block cursor-pointer h-21"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK Devnet"
                  class="flex justify-center items-center w-full h-full rounded-xl border-2 border-theme-primary-100 text-theme-primary-300 dark:border-theme-secondary-800"
                  data-testid="NetworkIcon-ARK-ark.devnet"
                >
                  <div
                    class="sc-bdfBwQ caqoGN"
                    data-testid="NetworkIcon__icon"
                    height="30"
                    width="30"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="senderAddress"
      >
        Sender
      </label>
      <div
        data-testid="sender-address"
      >
        <button
          class="relative w-full rounded focus:ring-2 focus:outline-none focus:ring-theme-primary-400"
          data-testid="SelectAddress__wrapper"
          type="button"
        >
          <span
            class="flex absolute inset-0 items-center px-14 w-full border border-transparent"
          >
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="text-base font-semibold text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 2
                </span>
              </span>
              <span
                class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                data-testid="Address__address"
              >
                D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
              </span>
            </div>
          </span>
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
          >
            <div
              class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 khDjUE"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
              >
                <img
                  alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                  title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                />
              </div>
            </div>
            <div
              class="flex relative invisible flex-1 h-full"
            >
              <input
                class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                data-testid="SelectAddress__input"
                name="senderAddress"
                readonly=""
                value="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdfBwQ iyevwF"
                    height="20"
                    width="20"
                  >
                    <svg>
                      user.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </button>
      </div>
    </fieldset>
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="fee"
      >
        Transaction Fee
      </label>
      <div
        class="flex space-x-2"
        data-testid="InputFee"
      >
        <div
          class="flex-1"
        >
          <div
            class="relative"
          >
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                  data-testid="InputCurrency"
                  name="fee"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="inline-flex items-center space-x-2"
          data-testid="ButtonGroup"
          role="radiogroup"
        >
          <button
            aria-checked="false"
            class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
            data-testid="ButtonGroupOption"
            role="radio"
            type="button"
          >
            Slow
          </button>
          <button
            aria-checked="false"
            class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
            data-testid="ButtonGroupOption"
            role="radio"
            type="button"
          >
            Average
          </button>
          <button
            aria-checked="false"
            class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
            data-testid="ButtonGroupOption"
            role="radio"
            type="button"
          >
            Fast
          </button>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`SendTransactionForm should use static fees if avg is not available 1`] = `
<div>
  <div
    class="space-y-5 SendTransactionForm"
  >
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="SendTransactionForm__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="SendTransactionForm__network-input"
            id="SendTransactionForm__network-label"
          />
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 text-theme-secondary-500 ring-theme-background dark:border-theme-secondary-700"
              data-testid="SelectNetworkInput__network"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="flex relative flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="SendTransactionForm__network-menu"
                aria-labelledby="SendTransactionForm__network-label"
                autocomplete="off"
                class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                data-testid="SelectNetworkInput__input"
                id="SendTransactionForm__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
              
            </div>
          </div>
        </div>
        <div
          class="hidden"
          data-testid="SelectNetwork__options"
        >
          <div
            class=""
          >
            <ul
              aria-labelledby="SendTransactionForm__network-label"
              class="grid grid-cols-6 gap-3"
              id="SendTransactionForm__network-menu"
              role="listbox"
            />
          </div>
          <div
            class="mt-6"
          >
            <ul
              aria-labelledby="SendTransactionForm__network-label"
              class="grid grid-cols-6 gap-3"
              id="SendTransactionForm__network-menu"
              role="listbox"
            >
              <li
                class="inline-block cursor-pointer h-21"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK Devnet"
                  class="flex justify-center items-center w-full h-full rounded-xl border-2 border-theme-primary-100 text-theme-primary-300 dark:border-theme-secondary-800"
                  data-testid="NetworkIcon-ARK-ark.devnet"
                >
                  <div
                    class="sc-bdfBwQ caqoGN"
                    data-testid="NetworkIcon__icon"
                    height="30"
                    width="30"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="senderAddress"
      >
        Sender
      </label>
      <div
        data-testid="sender-address"
      >
        <button
          class="relative w-full rounded focus:ring-2 focus:outline-none focus:ring-theme-primary-400"
          data-testid="SelectAddress__wrapper"
          type="button"
        >
          <span
            class="flex absolute inset-0 items-center px-14 w-full border border-transparent"
          >
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="text-base font-semibold text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 2
                </span>
              </span>
              <span
                class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                data-testid="Address__address"
              >
                D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
              </span>
            </div>
          </span>
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
          >
            <div
              class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 khDjUE"
              data-testid="Avatar"
            >
              <div
                class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
              >
                <img
                  alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                  title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                />
              </div>
            </div>
            <div
              class="flex relative invisible flex-1 h-full"
            >
              <input
                class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                data-testid="SelectAddress__input"
                name="senderAddress"
                readonly=""
                value="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdfBwQ iyevwF"
                    height="20"
                    width="20"
                  >
                    <svg>
                      user.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </button>
      </div>
    </fieldset>
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="fee"
      >
        Transaction Fee
      </label>
      <div
        class="flex space-x-2"
        data-testid="InputFee"
      >
        <div
          class="flex-1"
        >
          <div
            class="relative"
          >
            <div
              class="fixed invisible w-auto whitespace-nowrap"
            >
              
              …
            </div>
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                  data-testid="InputCurrency"
                  name="fee"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="inline-flex items-center space-x-2"
          data-testid="ButtonGroup"
          role="radiogroup"
        >
          <button
            aria-checked="false"
            class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
            data-testid="ButtonGroupOption"
            role="radio"
            type="button"
          >
            Slow
          </button>
          <button
            aria-checked="false"
            class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
            data-testid="ButtonGroupOption"
            role="radio"
            type="button"
          >
            Average
          </button>
          <button
            aria-checked="false"
            class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
            data-testid="ButtonGroupOption"
            role="radio"
            type="button"
          >
            Fast
          </button>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
